fixed alignment of row fluid well

--- a/penncycle/static/less/penncycle.less
+++ b/penncycle/static/less/penncycle.less
@@ -28,7 +28,7 @@ body{
 }
 .well {
 	background-color: @fadedwhite;
-	margin-left: -1.5%;
+	margin-left: -1.7%;
 
 }
 .foreground {
